Adding content to W01.md and editing README.md

--- a/w01.md
+++ b/w01.md
@@ -2,3 +2,16 @@
 permalink : /W01/
 ---
 Top 10 List of Week 01 
+==============================
+1. [Markdown Language - Syntax Guide](https://www.markdownguide.org/basic-syntax/)
+   Markdown language adalah sebuah language untuk mem-format suatu text dengan menggunakan plain editor contohnya seperti menggunakan vi. Pada link yang tertera diatas, terdapat penjelasan mengenai syntax markdown language yang mudah untuk diikuti.
+2. [UNIX vi editor](https://www.tutorialspoint.com/unix/unix-vi-editor.htm)
+   vi editor memiliki kemampuan yang sangat banyak, bisa membuat sebuah file baru, edit file yang sudah ada, atau hanya membaca file yang ingin dibaca. Tautan yang tertera diatas, berisikan penjelasan serta commands yang bisa digunakan dalam vi editor dengan sangat jelas dan lengkap.
+3. [Basic Linux Commands](https://www.youtube.com/watch?v=cBokz0LTizk)
+    Saya merupakan pengguna baru linux sehingga saya merasa sangat awan dan baru dengan command lines yang ada pada linux. Untuk itu, video yang tertera diatas sangat membantu saya dalam mencoba dan mengenal commands yang ada di linux.
+4. [About Git and GitHub](https://www.youtube.com/watch?v=xJXgvr8bPes)
+    Selain linux, kali ini juga merupakan pertama kali saya menggunakan github. Akhirnya saya tertarik untuk mencari lebih lanjut mengenai github dan saya terbantukan dengan video yang tertera diatas mengenai apa itu git, github, serta perbedaan antara keduanya.
+5. [How does SSH Work?](https://www.hostinger.com/tutorials/ssh-tutorial-how-does-ssh-work/amp)
+   Menurut saya artikel ini menarik karena dapat menjelaskan mengenai SSH dengan baik dan jelas. Artikel tersebut dilengkapi oleh ilustrasi yang menarik sehingga membuat saya semakin mengerti.
+6. [Beginners Guide To SSH](https://www.youtube.com/watch?v=qWKK_PNHnnA)
+    Selain artikel pada poin 5, saya juga menemukan video yang menurut saya jelas karena penjelasannya dilakukan dengan ilustrasi. Durasi videonya tidak terlalu panjang tetapi informasi yang saya ingin tahu sudah tersampaikan dengan jelas dan to-the-point.
