Editing readme.md and w01.md

--- a/w01.md
+++ b/w01.md
@@ -3,23 +3,23 @@ permalink : /W01/
 ---
 Top 10 List of Week 01 
 ==============================
-1. [Markdown Language - Syntax Guide](https://www.markdownguide.org/basic-syntax/)<br>
+1. __[Markdown Language - Syntax Guide](https://www.markdownguide.org/basic-syntax/)__<br>
    Markdown language adalah sebuah language untuk mem-format suatu text dengan menggunakan plain editor contohnya seperti menggunakan vi. Pada link yang tertera diatas, terdapat penjelasan mengenai syntax markdown language yang mudah untuk diikuti.
-2. [UNIX vi editor](https://www.tutorialspoint.com/unix/unix-vi-editor.htm)<br>
+2. __[UNIX vi editor](https://www.tutorialspoint.com/unix/unix-vi-editor.htm)__<br>
    vi editor memiliki kemampuan yang sangat banyak, bisa membuat sebuah file baru, edit file yang sudah ada, atau hanya membaca file yang ingin dibaca. Tautan yang tertera diatas, berisikan penjelasan serta commands yang bisa digunakan dalam vi editor dengan sangat jelas dan lengkap.
-3. [Basic Linux Commands](https://www.youtube.com/watch?v=cBokz0LTizk)<br>
+3. __[Basic Linux Commands](https://www.youtube.com/watch?v=cBokz0LTizk)__<br>
     Saya merupakan pengguna baru linux sehingga saya merasa sangat awan dan baru dengan command lines yang ada pada linux. Untuk itu, video yang tertera diatas sangat membantu saya dalam mencoba dan mengenal commands yang ada di linux.
-4. [About Git and GitHub](https://www.youtube.com/watch?v=xJXgvr8bPes)<br>
+4. __[About Git and GitHub](https://www.youtube.com/watch?v=xJXgvr8bPes)__<br>
     Selain linux, kali ini juga merupakan pertama kali saya menggunakan github. Akhirnya saya tertarik untuk mencari lebih lanjut mengenai github dan saya terbantukan dengan video yang tertera diatas mengenai apa itu git, github, serta perbedaan antara keduanya.
-5. [How does SSH Work?](https://www.hostinger.com/tutorials/ssh-tutorial-how-does-ssh-work/amp)<br>
+5. __[How does SSH Work?](https://www.hostinger.com/tutorials/ssh-tutorial-how-does-ssh-work/amp)__<br>
    Menurut saya artikel ini menarik karena dapat menjelaskan mengenai SSH dengan baik dan jelas. Artikel tersebut dilengkapi oleh ilustrasi yang menarik sehingga membuat saya semakin mengerti.
-6. [Beginners Guide To SSH](https://www.youtube.com/watch?v=qWKK_PNHnnA)<br>
+6. __[Beginners Guide To SSH](https://www.youtube.com/watch?v=qWKK_PNHnnA)__<br>
     Selain artikel pada poin 5, saya juga menemukan video yang menurut saya jelas karena penjelasannya dilakukan dengan ilustrasi. Durasi videonya tidak terlalu panjang tetapi informasi yang saya ingin tahu sudah tersampaikan dengan jelas dan to-the-point.
-7. [Bash Scripting](https://ryanstutorials.net/linuxtutorial/scripting.php)<br>
+7. __[Bash Scripting](https://ryanstutorials.net/linuxtutorial/scripting.php)__<br>
     Artikel tersebut membahas mengenai Bash scripting yang artinya kita dapat menaruh command pada suatu script sehingga memudahkan jika kita ingin melakukan command yang repetitif. Artikel itu menjelaskan dengan menekankan pada poin-poin penting yang perlu diperhatikan saat melakukan bash scripting.
-8. [Reguler Expression Tutorial](https://www.youtube.com/playlist?list=PL4cUxeGkcC9g6m_6Sld9Q4jzqdqHd2HiD)<br>
+8. __[Reguler Expression Tutorial](https://www.youtube.com/playlist?list=PL4cUxeGkcC9g6m_6Sld9Q4jzqdqHd2HiD)__<br>
     Playlist tersebut merupakan salah satu playlist yang membuat saya mengerti lebih jauh mengenai regex. Durasi per videonya tidak panjang sehingga lebih mudah untuk dipelajari satu-persatu.
-9. [More about regex](https://ryanstutorials.net/regular-expressions-tutorial/)<br>
+9. __[More about regex](https://ryanstutorials.net/regular-expressions-tutorial/)__<br>
    Selain playlist diatas, terdapat pula artikel ini yang menjelaskan regex dengan detail dan jelas. Artikel tersebut dilengkapi dari level basic hingga advance dan cheat sheet dari regex, sehingga lebih mudah untuk mengakses semuanya hanya dalam satu tautan.
-10. [Debian vs Ubuntu](https://www.ubuntupit.com/debian-vs-ubuntu-top-15-things-to-know-before-choosing-the-best-one/)
+10. __[Debian vs Ubuntu](https://www.ubuntupit.com/debian-vs-ubuntu-top-15-things-to-know-before-choosing-the-best-one/)__<br>
     Karena teman-teman jurusan Sistem Informasi banyak yang menggunakan ubuntu maka saya ingin mencari tahu lebih lanjut mengenai apa itu ubuntu dan perbedaannya dengan debian. Pada artikel yang ada ditautan disebutkan terdapat 15 poin penting yang harus diperhatikan ketika kita memilih untuk menggunakan ubuntu atau debian.
