Adding log, updating script, updating top 10 w02 contents

--- a/w02.md
+++ b/w02.md
@@ -3,3 +3,7 @@ permalink : /W02/
 ---
 Top 10 List of Week 02
 ==============================
+1. [Write and Run a C Program](https://vitux.com/how-to-write-and-run-a-c-program-in-linux/)
+    Pada week 02, kita diberikan tugas untuk mencoba program dengan C-language. Untuk itu, saya mencari cara untuk me-run program C dan menemukan tautan di atas. Menurut saya, tautan tersebut sangat membantu dan menjelaskan dengan baik cara menuliskan dan run program C.
+2. [Bash Scripting Cheatsheet](https://devhints.io/bash)<br>
+    Misal pada demos week 2 terdapat banyak file C yang harus dicompile dengan cara yang sama tetapi berulang, untuk meminimalisir hal-hal yang harus dilakukan secara repetitif kita bisa membuat sebuah script untuk melakukan command yang kita ingin lakukan tapi hanya dengan menggunakan 1 command saja. Untuk itu, tautan diatas adalah link yang menarik karena berisi hal-hal yang diperlukan untuk melakukan bash scripting.
