Adding content to w02.md

--- a/w02.md
+++ b/w02.md
@@ -7,3 +7,11 @@ Top 10 List of Week 02
     Pada week 02, kita diberikan tugas untuk mencoba program dengan C-language. Untuk itu, saya mencari cara untuk me-run program C dan menemukan tautan di atas. Menurut saya, tautan tersebut sangat membantu dan menjelaskan dengan baik cara menuliskan dan run program C.
 2. [Bash Scripting Cheatsheet](https://devhints.io/bash)<br>
     Misal pada demos week 2 terdapat banyak file C yang harus dicompile dengan cara yang sama tetapi berulang, untuk meminimalisir hal-hal yang harus dilakukan secara repetitif kita bisa membuat sebuah script untuk melakukan command yang kita ingin lakukan tapi hanya dengan menggunakan 1 command saja. Untuk itu, tautan diatas adalah link yang menarik karena berisi hal-hal yang diperlukan untuk melakukan bash scripting.
+3. [Data Encryption](https://www.tutorialspoint.com/internet_technologies/data_encryption.htm)<br>
+    Tautan di atas membantu saya dalam memahami apa itu enkripsi karena enkripsi merupakan materi yang baru untuk saya. Penjelasan yang diberikan cukup jelas dan diberikan ilustrasi sehingga membuat saya lebih tertarik dan mengerti.
+4. [Symmetric and Asymmetric Encription](https://www.youtube.com/watch?v=pArLLJmgX10)<br>
+    Video pada tautan di atas menjelaskan mengenai apa itu symmetric dan asymmetric encryption. Penjelasan dimulai dari definisi symmetric dan asymmetric encryption, kemudian ada pula penjelasan mengenai public key, private key, dan bagaimana menjadi symmetric keys. Penjelasan dilakukan melalui bentuk powerpoint yang juga dilengkapi dengan ilustrasi.
+5. [Asymmetric Encription](https://www.youtube.com/watch?v=AQDCe585Lnc)<br>
+    Selain video pada poin 4 ada pula video penjelasan mengenai asymmetric encryption yang membantu saya. Video tersebut menarik karena menjelaskannya dengan ilustrasi dan bahasa yang mudah dipahami. Video tersebut juga durasinya tidak panjang tetapi memuat sangat banyak informasi. Ada pula penjelasan singkat mengenai symmetric encryption di awal video.
+6. [What is a security breach?](https://www.kaspersky.com/resource-center/threats/what-is-a-security-breach)<br>
+    Artikel tersebut menarik karena menjelaskan secara lengkap dan detail mengenai security breach. Penjelasan yang ada mencakup definisi, contoh, tipe, dan lainnya. Menurut saya, hal yang paling berkesan untuk saya adalah penjelasan apa saja yang harus dilakukan jika kita terjebak dalam security breach serta bagaimana tindakan preventif agar kita terhindar dari security breach. Karena hal ini menyadarkan saya bahwa dengan menggunakan password yang lemah ataupun digunakan secara repetitif akan meningkatkan risiko terkena security breach.
