--- a/w02.md
+++ b/w02.md
@@ -3,12 +3,12 @@ permalink : /W02/
 ---
 Top 10 List of Week 02
 ==============================
-1. [Write and Run a C Program](https://vitux.com/how-to-write-and-run-a-c-program-in-linux/)<br>
-    Pada week 02, kita diberikan tugas untuk mencoba program dengan C-language. Untuk itu, saya mencari cara untuk me-run program C dan menemukan tautan di atas. Menurut saya, tautan tersebut sangat membantu dan menjelaskan dengan baik cara menuliskan dan run program C.
-2. [Bash Scripting Cheatsheet](https://devhints.io/bash)<br>
-    Misal pada demos week 2 terdapat banyak file C yang harus dicompile dengan cara yang sama tetapi berulang, untuk meminimalisir hal-hal yang harus dilakukan secara repetitif kita bisa membuat sebuah script untuk melakukan command yang kita ingin lakukan tapi hanya dengan menggunakan 1 command saja. Untuk itu, tautan diatas adalah link yang menarik karena berisi hal-hal yang diperlukan untuk melakukan bash scripting.
+1. __[Write and Run a C Program](https://vitux.com/how-to-write-and-run-a-c-program-in-linux/)__<br>
+    Pada week 02, kita diberikan tugas untuk mencoba program dengan C-language. Untuk itu, saya mencari cara untuk me-run program C dan menemukan tautan di atas. Menurut saya, tautan tersebut sangat membantu dan menjelaskan dengan baik **cara menuliskan dan run program C**.
+2. __[Bash Scripting Cheatsheet](https://devhints.io/bash)__<br>
+    Misal pada demos week 2 terdapat banyak file C yang harus dicompile dengan cara yang sama tetapi berulang, untuk meminimalisir hal-hal yang harus dilakukan secara repetitif kita bisa membuat sebuah script untuk melakukan command yang kita ingin lakukan tapi hanya dengan menggunakan 1 command saja. Untuk itu, tautan diatas adalah link yang menarik karena berisi hal-hal yang diperlukan untuk melakukan **bash scripting**.
 3. __[Data Encryption](https://www.tutorialspoint.com/internet_technologies/data_encryption.htm)__<br>
-    Tautan di atas membantu saya dalam memahami apa itu enkripsi karena enkripsi merupakan materi yang baru untuk saya. Penjelasan yang diberikan cukup jelas dan diberikan ilustrasi sehingga membuat saya lebih tertarik dan mengerti.
+    Tautan di atas membantu saya dalam memahami **apa itu enkripsi** karena enkripsi merupakan materi yang baru untuk saya. Penjelasan yang diberikan cukup jelas dan diberikan ilustrasi sehingga membuat saya lebih tertarik dan mengerti. Enkripsi sendiri adalah salah satu cara untuk mengamankan informasi dimana hanya user yang diperbolehkan yang membaca informasi tersebut.
 4. __[Symmetric and Asymmetric Encription](https://www.youtube.com/watch?v=pArLLJmgX10)__<br>
     Video pada tautan di atas menjelaskan mengenai apa itu *symmetric dan asymmetric encryption*. Penjelasan dimulai dari definisi symmetric dan asymmetric encryption, kemudian ada pula penjelasan mengenai *public key, private key, dan bagaimana menjadi symmetric keys*. Penjelasan dilakukan melalui bentuk powerpoint yang juga dilengkapi dengan ilustrasi.
 5. __[Asymmetric Encription](https://www.youtube.com/watch?v=AQDCe585Lnc)__<br>
@@ -16,7 +16,7 @@ Top 10 List of Week 02
 6. __[What is a security breach?](https://www.kaspersky.com/resource-center/threats/what-is-a-security-breach)__<br>
     Artikel tersebut menarik karena menjelaskan secara lengkap dan detail mengenai *security breach*. Penjelasan yang ada mencakup definisi, contoh, tipe, dan lainnya. Menurut saya, hal yang paling berkesan untuk saya adalah penjelasan apa saja yang harus dilakukan jika kita terjebak dalam security breach serta bagaimana tindakan preventif agar kita terhindar dari security breach. Karena hal ini menyadarkan saya bahwa dengan menggunakan password yang lemah ataupun digunakan secara repetitif akan meningkatkan risiko terkena security breach.
 7. __[Potential Security Threats To Your Computer Systems](https://www.guru99.com/potential-security-threats-to-your-computer-systems.html)__<br>
-    Artikel tersebut menjelaskan tentang potensi ancaman security yang bisa terjadi pada komputer kita. Pada artikel tersebut dibagi menjadi tiga bagian, yaitu apa itu security threat, ancaman berbentuk fisik, dan ancaman yang non fisik. Security threat sendiri adalah risiko yang bisa mengancam keamanan komputer dan bisa berbentuk fisik juga non fisik. Contoh dari ancaman fisik adalah ketika komputer dengan data-data yang vital dicuri dan contoh dari ancaman non fisik adalah serangan virus.
+    Artikel tersebut menjelaskan tentang potensi ancaman security yang bisa terjadi pada komputer kita. Pada artikel tersebut dibagi menjadi tiga bagian, yaitu **apa itu security threat, ancaman berbentuk fisik, dan ancaman yang non fisik**. Security threat sendiri adalah risiko yang bisa mengancam keamanan komputer dan bisa berbentuk fisik juga non fisik. Contoh dari ancaman fisik adalah ketika komputer dengan data-data yang vital dicuri dan contoh dari ancaman non fisik adalah serangan virus.
 8. __[Difference between malware and ransomware](https://www.geeksforgeeks.org/difference-between-malware-and-ransomware/)__<br>
     Pada security threat, saya menemukan kata yang selama ini terasa familiar tetapi saya tidak tahu perbedaan antara keduanya, yaitu **malware** dan **ransomware**. Pada artikel di atas dijelaskan, malware adalah term yang digunakan untuk mendeskripsikan tipe-tipe dari *malicious software*. Sementara, ransomware adalah tipe dari malware yang dibuat agar user tidak bisa mengakses sistem milik sendiri hingga ada ransom fee yang dibayarkan.
 9. __[15 Types of Cyber Attacks To Look Out For](https://www.youtube.com/watch?v=NDcEOW8r0xc)__<br>
