Add content to w03.md and update mylog.txt

--- a/w03.md
+++ b/w03.md
@@ -3,3 +3,30 @@ permalink : /W03/
 ---
 Top 10 List of Week 03
 ==============================
+1. __[File System in OS](https://www.tutorialspoint.com/operating_system/os_file_system.htm)__<br>
+    Menurut saya, artikel pada tautan menarik karena berisikan hal-hal umum yang berkaitan dengan file system secara lengkap. Kemudian, penjelasan dilakukan dengan bahasa yang mudah dimengerti sehingga saya dapat mengerti gambaran umum dari file system itu sendiri. Artikel tersebut menjelaskan mengenai definisi, struktur, mekanisme pengaksesan, serta *space allocation* dari sebuah file system.
+2. __[File System Implementation in Operating System](https://www.geeksforgeeks.org/file-system-implementation-in-operating-system/)__<br>
+    Pada artikel dijelaskan bahwa suatu file system di-organize ke dalam beberapa layer, yaitu logical file system, file organization module, basic file system, dan I/O control level. Poin penting yang saya ambil dari artikel ini adalah definisi tiap-tiap layernya yang dijelaskan secara singkat tapi jelas. Pada artikel juga disebutkan kelebihan, kekurangan, serta implementasi dari file system.
+    
+3. __[File Permissions in Linux](https://www.guru99.com/file-permissions.html)__<br>
+    Artikel tersebut menjelaskan mengenai ownership dan permissions pada linux. Dijelaskan pada artikel bahwa ownership pada linux terbagi menjadi 3, yaitu User, Group, dan Other. Sementara, permission yang dimaksud adalah permissions suatu owner untuk melakukan read, write, dan execute. Artikel ini juga menarik karena dilengkapi dengan penjelasan dan gambaran umum dari cara kerja command chmod dan chown.
+4. __[Linux chmod Command](https://www.computerhope.com/unix/uchmod.htm)__<br>
+    Seperti yang dijelaskan pada artikel poin 3 mengenai command chmod, pada artikel ini dijelaskan chmod mengenai deskripsinya, syntaxnya, dan penggunaannya secara lengkap dan mendetail. Artikel ini juga menarik karena saya jadi mengerti bagaimana cara membuat permissions baik dengan octal maupun wrx.
+    
+5. __[Linux chown Command](https://www.computerhope.com/unix/uchown.htm)__<br>
+    Seperti yang dijelaskan pada artikel poin 3 mengenai command chown, artikel yang bersangkutan menjelaskan chown berdasarkan deskripsinya, syntax, dan cara penggunaannya. Command chown sendiri digunakan untuk mengubah owner dari suatu file. Selain menjelaskan hal-hal yang berkaitan dengan syntax, poin menarik lainnya adalah dijelaskan mengapa kita mengubah ownership dari suatu file.
+    
+6. __[File Access Methods in Operating System](https://www.geeksforgeeks.org/file-access-methods-in-operating-system/)__<br>
+    Artikel tersebut menjelaskan tentang 3 cara mengakses file pada sistem komputer. Ketiga cara tersebut adalah Sequential Access, Direct Access, dan Index Sequential Method. Hal yang menarik pada artikel ini adalah menyebutkan key point dari cara-cara serta dijelaskan secara definitif tetapi tetap mudah saya pahami.
+
+7. __[How to Mount and Unmount Filesystems in Linux](https://www.baeldung.com/linux/mount-unmount-filesystems)__<br>
+    Artikel ini membantu saya untuk memahami cara melakukan mounting dan unmounting. Artikel terbagi menjadi beberapa poin yaitu overview, list mounted filesystems, mounting filesystems, dan unmounting filesystems. Mounting filesystems dan unmounting filesystems masing-masing dibagi menjadi beberapa poin lagi sesuai dengan tipe dan contohnya untuk melakukan attach dan detach filesystem atau devices.
+
+8. __[Linux Tutorial - Partitions](https://www.youtube.com/watch?v=BtSQIxDPnLc)__<br>
+    Pada video dijelaskan apa itu partitions dan kapan harus menggunakannya. Selain itu, video ini juga memperlihatkan cara-cara membuat partitions. Video ini membantu saya memahami mengenai partitions pada linux. Video ini membuat saya mengingat lagi saat pertama kali install debian guest ternyata saya sudah pernah membuat partisi hanya saja dahulu saya belum mengetahui secara pasti maksud dari disk partitions itu seperti apa.
+    
+9. __[Difference between Local File System (LFS) and Distributed File System (DFS)](https://www.geeksforgeeks.org/difference-between-local-file-system-lfs-and-distributed-file-system-dfs/)__<br>
+    Artikel tersebut menarik karena saya ingat saat pertama kali menginstall debian guest, kita membuat mount point /lfs tetapi saya tidak mengetahui apa itu LFS. Pada artikel dijelaskan definisi LFS dan membuat saya mengetahui mengenai DFS. Terdapat pula tabel yang berisikan perbedaan antara LFS dan DFS. 
+    
+10. __[Linux File System/Structure Explained!](https://www.youtube.com/watch?v=HbgzrKJvDRw)__<br>
+    Video ini membantu saya dalam memahami bagaimana file structure pada bekerja serta fungsi-fungsinya. Di awal perkuliahan saat pertama kali install debian guest, saya cukup kebingungan karena banyak sekali istilah-istilah yang tidak saya mengerti. Pada video ini file structure dijelaskan secara rinci dan dengan bahasa yang mudah mengerti, beberapa ilustrasi di awal video juga membuat saya tetap tertarik menonton video ini. 
