Add content to w04.md

--- a/w04.md
+++ b/w04.md
@@ -3,3 +3,13 @@ permalink : /W04/
 ---
 Top 10 List of Week 04
 ==============================
+1. __[Little and Big Endian Mystery](https://www.geeksforgeeks.org/little-and-big-endian-mystery/)__<br>
+    Istilah little dan big endian pertama saya ketahui pada mata kuliah POK. Untuk mengingat kembali apa itu little dan big endian, saya menemukan artikel pada tautan. Artikel tersebut menarik karena sangat lengkap. Artikel menjelaskan little dan big endian secara definisi hingga memilih yang lebih baik di antara little atau big endian. 
+2. __[What is Address Binding?](https://www.techwalla.com/articles/what-is-address-binding)__<br>
+    Pada artikel dijelaskan mengenai definisi dari address binding. Kemudian, artikel juga dilengkapi dengan penjelasan tiga tipe atau tahapan dimana address binding dapat terjadi, yaitu pada saat compile time, load time, dan execution time.
+3. __[Difference between Logical and Physical Address](https://vivadifferences.com/8-difference-between-logical-and-physical-address-in-operating-system/)__<br>
+    Artikel tersebut menjelaskan tentang definisi dari logical dan physical address. Artikel ini menarik karena terdapat ilustrasi bagaimana sistem logical address bekerja. Kemudian, artikel juga menyebutkan 8 poin perbedaan dari logical dan physical address secara paragraf dan tabel. Sehingga sangat mudah untuk membandingkan perbedaan dari logical dan physical address.
+4. __[Dynamic Linking vs Dynamic Loading](https://www.baeldung.com/cs/dynamic-linking-vs-dynamic-loading)__<br>
+    Linking adalah proses yang menyambungkan antar program untuk melakukan program execution. Sementara, loading adalah proses melakukan load dari secondary memory ke main memory. Artikel tersebut menarik karena menjelaskan secara jelas dan lengkap apa itu linking (static dan dynamic), loading, serta bagaimana linking dan loading bekerja.
+5. __[Partition Allocation Methods in Memory Management](https://www.geeksforgeeks.org/partition-allocation-methods-in-memory-management/)__<br>
+    Pada artikel dijelaskan empat teknik memory management. Kemudian, dijelaskan pula mengenai partition allocation method yang diperlukan ketika partition allocation. Partition allocation method terdiri dari beberapa algoritma, yaitu first fit, best fit, worst fit, dan next fit. Masing-masing algoritma dijelaskan dengan baik serta dilengkapi dengan ilustrasi sehingga saya bisa lebih mengerti.
