Finishing content in w04.md

--- a/w04.md
+++ b/w04.md
@@ -12,4 +12,15 @@ Top 10 List of Week 04
 4. __[Dynamic Linking vs Dynamic Loading](https://www.baeldung.com/cs/dynamic-linking-vs-dynamic-loading)__<br>
     Linking adalah proses yang menyambungkan antar program untuk melakukan program execution. Sementara, loading adalah proses melakukan load dari secondary memory ke main memory. Artikel tersebut menarik karena menjelaskan secara jelas dan lengkap apa itu linking (static dan dynamic), loading, serta bagaimana linking dan loading bekerja.
 5. __[Partition Allocation Methods in Memory Management](https://www.geeksforgeeks.org/partition-allocation-methods-in-memory-management/)__<br>
-    Pada artikel dijelaskan empat teknik memory management. Kemudian, dijelaskan pula mengenai partition allocation method yang diperlukan ketika partition allocation. Partition allocation method terdiri dari beberapa algoritma, yaitu first fit, best fit, worst fit, dan next fit. Masing-masing algoritma dijelaskan dengan baik serta dilengkapi dengan ilustrasi sehingga saya bisa lebih mengerti.
+    Pada artikel dijelaskan empat teknik memory management secara singkat. Kemudian, dijelaskan pula mengenai partition allocation method yang diperlukan ketika partition allocation. Partition allocation method terdiri dari beberapa algoritma, yaitu first fit, best fit, worst fit, dan next fit. Masing-masing algoritma dijelaskan dengan baik serta dilengkapi dengan ilustrasi sehingga saya bisa lebih mengerti.
+6. __[Paging in OS](https://www.guru99.com/paging-in-operating-system.html)__<br>
+    Artikel tersebut menarik karena membantu saya memahami apa itu Paging dalam OS. Artikel terdiri dari beberapa bagian, yaitu apa itu paging dan contohnya, paging protection, kelebihan dan kekurangan paging, serta segmentasi. Penjelasan pada artikel menggunakan bahasa yang mudah dimengerti serta terdapat ilustrasi tentang paging.
+7. __[Swapping in OS](https://www.javatpoint.com/swapping-in-operating-system)__<br>
+    Swapping adalah memory management scheme dimana suatu proses bisa diswap terlebih dahulu ke secondary memory sehingga main memory cukup untuk menjalankan proses yang lain. Artikel tersebut menarik karena menyebutkan bagaimana kelebihan dan kekurangan dari swapping. Selain itu, artikel juga menjelaskan definisi dari swap in dan swap out.
+8. __[Fragmentation and its Types](https://afteracademy.com/blog/what-is-fragmentation-and-what-are-its-types)__<br>
+    Pada materi memory allocation, ada istilah yang belum familiar buat saya yaitu fragmentasi. Artikel ini membantu saya mengetahui apa itu fragmentasi pada OS. Selain itu, dijelaskan pula mengenai tipe dari fragmentasi yaitu internal dan external fragmentasi. Artikel ini menjelaskan internal dan external dengan menggunakan contoh sehingga lebih terlihat jelas perbedaan, kelebihan, dan kekurangannya.
+9. __[Segmented, Paged and Virtual Memory](https://www.youtube.com/watch?v=p9yZNLeOj4s)__<br>
+    Video tersebut menjelaskan mengenai segmented, paged, dan virtual memory. Video tersebut menarik karena menggunakan animasi untuk menggambarkan bagaimana segmented, paged, dan virtual memory bekerja. Kemudian, terdapat pula rangkuman dari penjelasan animasi sebelumnya sehingga dapat diketahui dengan mudah bagaimana poin penting dari masing-masing memory
+10. __[Pointer in C](https://www.youtube.com/watch?v=mw1qsMieK5c)__<br>
+    Pada video dijelaskan bagaimana program c menggunakan pointer. Pada video didemokan bahwa kita bisa mengganti value sebuah variabel dengan menggunakan pointernya. Selain itu, dijelaskan pula pointer pada array. Video ini menarik karena penjelasannya bertahap sehingga saya lebih mengerti bagaimana cara kerjanya serta melakukan live coding sehingga bisa terlihat bagaimana pointer bekerja.
+
