--- a/w05.md
+++ b/w05.md
@@ -3,4 +3,23 @@ permalink : /W05/
 ---
 Top 10 List of Week 05
 ==============================
-
+1. __[Virtual Memory in Operating System](https://www.tutorialspoint.com/operating_system/os_virtual_memory.htm)__<br>
+	Artikel tersebut membahas hal-hal penting mengenai virtual memory pada os. Artikel tersebut menarik karena memiliki materi yang sangat lengkap dan penjelasannya menggunakan bahasa yang sederhana. Selain itu, artikel juga dilengkapi penjelasan mengenai beberapa algoritma page replacement.
+2. __[What is Virtual Memory?](https://www.youtube.com/watch?v=2quKyPnUShQ)__<br>
+	Video tersebut menjelaskan tentang apa itu virtual memory. Melengkapi dari artikel pada  poin 1, video tersebut membantu saya dalam mengerti apa itu virtual memory secara lebih lanjut.
+3. __[The top Command](https://www.youtube.com/watch?v=jB6dS3_xdBA)__<br>
+	Pada video dijelaskan mengenai top command. Hal yang membuat saya tertarik pada video ini adalah ada penjelasan mengenai apa maksud dari masing-masing variabel. Command top sendiri digunakan untuk melihat proses yang sedang running pada mesin.
+4. __["top" Command Examples](https://www.tecmint.com/12-top-command-examples-in-linux/)__<br>
+	Artikel memuat contoh-contoh dari command top. Command top yang dicontohkan memiliki tujuan yang berbeda-beda. Misalnya, ketika kita ingin menyimpan hasil top command pada sebuah txt. Maka, kita bisa menjalankan top -n 1 -b > top-output.txt , dan lain sebagainya.
+5. __[OS Demand Paging](https://www.javatpoint.com/os-demand-paging)__<br>
+	Artikel tersebut menjelaskan mengenai demand paging secara singkat namun jelas. Artikel tersebut juga menjelaskan apa itu thrashing serta apa itu page fault.
+6. __[Page Replacement Algorithms in OS](https://www.geeksforgeeks.org/page-replacement-algorithms-in-operating-systems/)__<br>
+	Artikel tersebut menjelaskan tentang algoritma-algoritma page replacement. Page replacement dibutuhkan ketika tidak ada lagi tempat di memory sehingga harus diputuskan page mana yang harus di replace. Algoritma page replacement yang dijelaskan antara lain First In First Out (FIFO), optimal page replacement, dan least recently used.
+7. __[First-In First-Out examples](https://www.youtube.com/watch?v=ET43MRKRuYM)__<br>
+	Pada video dijelaskan suatu contoh dari algoritma FIFO. Menurut saya, video tersebut menarik karena saya jadi lebih mengerti bagaimana algoritma FIFO berjalan secara bertahap. Selain contoh yang ada, video tersebut juga menjelaskan secara singkat apa itu algoritma FIFO.
+8. __[Optimal Page Replacement examples](https://www.youtube.com/watch?v=jeJIKKQcqpU)__<br>
+	Video tersebut menjelaskan apa itu optimal page. Selain itu, video tersebut juga menjelaskan tentang contoh soal algoritma page replacement. Penjelasan contoh tidak terlalu cepat sehingga saya bisa mengikutinya. Secara keseluruhan, video tersebut membantu saya dalam memahami apa itu optimal page replacement.
+9. __[Second Chance Algorithm](https://www.youtube.com/watch?v=C26qsPwf-Js)__<br>
+	Video ini menjelaskan tentang algoritma second chance. Video tersebut menarik karena terdapat contoh sehingga saya lebih mengerti bagaimana second chance algorithm bekerja. Contoh dijelaskan secara bertahap sehingga mudah untuk mengikuti tahapan-tahapannya.
+10. __[Page Fault Handling](https://www.geeksforgeeks.org/page-fault-handling-in-operating-system/)__<br>
+	Artikel tersebut menjelaskan mengenai tahapan-tahapan yang terjadi pada saat page fault terjadi. Di awal artikel didefinisikan pula apa itu page fault. Kemudian, artikel tersebut menarik karena dijelaskan dengan bahasa yang mudah dimengerti serta terdapat ilustrasi tahapannya.
