--- a/w06.md
+++ b/w06.md
@@ -3,4 +3,129 @@ permalink : /W06/
 ---
 Top 10 List of Week 06
 ==============================
+1. __[Introduction to Threads](https://www.youtube.com/watch?
 
+v=LOfGJcVnvAk)__<br>
+	Video tersebut menjelaskan secara umum mengenai thread. Selain itu 
+
+video juga menjelaskan mengenai apa itu single threading serta multi 
+
+threading. Video ini menarik karena video ini membantu saya dalam mengerti 
+
+mengenai threads dan penjelasan menggunakan ilustrasi sehingga lebih 
+
+jelas.
+2. __[Multithreading in OS](https://www.geeksforgeeks.org/multithreading-
+
+in-operating-system/)__<br>
+	Artikel tersebut menjelaskan mengenai multithreading dengan jelas. 
+
+Selain menjelaskan mengenai multi threading, artikel juga mencantumkan 
+
+penjelasan mengenai process dan thread secara singkat. Poin menarik dari 
+
+artikel ini adalah dijelaskan mengenai aplikasi dari threading di dunia 
+
+nyata.
+3. __[Benefits of Multithreading in OS]
+
+(https://www.tutorialspoint.com/the-benefits-of-multithreaded-
+
+programming)__<br>
+	Artikel tersebut menjelaskan tentang kelebihan dari 
+
+multithreading. Kelebihan tersebut dibagi menjadi empat kategori, yaitu 
+
+*Resources Sharing*, *Responsiveness*, *Utilization of Multiprocessor 
+
+Architecture*, *Economy*. Artikel tersebut menarik karena menjelaskan 
+
+dengan baik perkategorinya bagaimana kelebihan dari multithreading.
+4. __[Difference between Concurrency and Parallelism]
+
+(https://www.geeksforgeeks.org/difference-between-concurrency-and-
+
+parallelism/)__<br>
+	Artikel tersebut menjelaskan mengenai perbedaan dari *Concurrency* 
+
+dan *Parallelism*. *Concurrency* adalah menjalankan dan mengatur bagaimana 
+
+suatu program dapat menjalankan banyak komputasi pada waktu yang 
+
+bersamaan. Sementara, *Parallelism* adalah menjalankan berbagai komputasi 
+
+secara serentak dan paralel. Artikel ini menarik karena menampilkan 
+
+perbedaan antara *Concurrency* dan *Parallelism* secara tabel sehingga 
+
+lebih terlihat jelas bagaimana perbedaan antara keduanya. 
+5. __[Interprocess Communication (IPC)]
+
+(https://www.w3schools.in/operating-system-tutorial/interprocess-
+
+communication-ipc/)__<br>
+	Artikel ini menjelaskan mengenai IPC secara umum. Artikel tersebut 
+
+menjelaskan tentang hal-hal penting yang ada pada IPC, yaitu *Information 
+
+Sharing*, *Computation Speedup*, *Modularity*, dan *Convenience*. 
+
+Kemudian, artikel juga menyebutkan bahwa ada dua model utama yang ada pada 
+
+IPC yaitu *shared memory* dan *message passing*.
+6. __[Interprocess Communication Explained]
+
+(https://www.youtube.com/watch?v=dJuYKfR8vec)__<br>
+	Untuk membantu saya dalam memahami IPC lebih lanjut, saya 
+
+menemukan video ini. Pada video dijelaskan IPC dengan bahasa yang mudah 
+
+dimengerti. Hal-hal yang dicakup dalam video antara lain adalah penjelasan 
+
+mengenai independent dan cooperating processes, hal penting yang ada di 
+
+IPC pada artikel poin 5, shared memory, dan message passing.
+7. __[OS Process States](https://notesformsc.org/os-process-states/)__<br>
+	Artikel ini menjelaskan mengenai apa itu process. Kemudian, 
+
+artikel juga menjelaskan apa saja state pada process serta arti dari 
+
+masing-masing state. Selain itu, artikel juga menampilkan bagaimana 
+
+diagram dari process state.
+8. __[Fork System Call in Linux](https://linuxhint.com/fork-system-call-
+
+linux/)__<br>
+	Pada artikel dijelaskan mengenai fork di system call Linux. Fork 
+
+sendiri adalah command untuk membuat suatu process baru. Artikel juga 
+
+menjelaskan mengenai perbedaan pada process ID antara child dan parentnya, 
+
+property dari child process, dan property yang tidak di-inherit oleh 
+
+child. Kemudian, artikel ini juga menampilkan contoh fork pada C dari 
+
+syntaxnya hingga pengaplikasiannya.
+9. __[Exec Command in Shell Script](https://www.baeldung.com/linux/exec-
+
+command-in-shell-script/)__<br>
+	Artikel tersebut menjelaskan secara jelas dan rinci mengenai exec 
+
+command. Artikel tersebut menarik karena menjelaskan mengenai cara kerja 
+
+dari exec command dengan memberikan contoh. Kemudian, artikel juga 
+
+menyediakan berbagai bentuk eksekusi exec command sehingga saya lebih 
+
+mengerti bagaimana bentuk-bentuk eksekusi dari exec command.
+10. __[fork() and exec() System Calls](https://www.youtube.com/watch?
+
+v=IFEFVXvjiHY)__<br>
+	Video tersebut menjelaskan mengenai fork dan exec command. Pada 
+
+video dijelaskan fungsi dari fork dan exec command. Kemudian, video juga 
+
+menyediakan berbagai contoh eksekusi dari kedua command tersebut sehingga 
+
+lebih terlihat jelas cara kerjanya.
