--- a/w07.md
+++ b/w07.md
@@ -3,4 +3,24 @@ permalink : /W07/
 ---
 Top 10 List of Week 07
 ==============================
+1. __[Introduction to Process Synchronization](https://www.geeksforgeeks.org/introduction-of-process-synchronization/)__<br>
+    Artikel ini menjelaskan apa itu process synchronization. Artikel ini juga mencakup dan menjelaskan secara singkat apa itu race condition dan critical section. Selain itu, dijelaskan pula mengenati solusi dari critical solution problem. Artikel ini menarik karena cakupan materinya lengkap dan bahasanya mudah dimengerti.
+2. __[What is a Race Condition?](https://www.baeldung.com/cs/race-conditions)__<br>
+    Artikel ini menarik karena menjelaskan Race Condition secara lengkap dan jelas. Kemudian, artikel juga dilengkapi dengan contoh dan ilustrasi sehingga lebih mudah dimengerti.
+3. __[Critical Section](https://www.javatpoint.com/os-critical-section-problem)__<br>
+    Artikel ini menjelaskan tentang bagaimana definisi critical section. Kemudian, dijelaskan pula apa saja requirement dari mekanisme Synchronization. Pada artikel dijelaskan bahwa mekanismenya dibagi menjadi dua, yaitu Primary dan Secondary.
+4. __[Peterson’s Solution](https://www.tutorialspoint.com/peterson-s-problem)__<br>
+    Artikel ini menjelaskan mengenai salah satu algoritma yang menjadi solusi untuk critical section problem. Artikel ini menarik karena menampilkan contoh code dan menjelaskan algoritma ini secara rinci. Selain itu, artikel juga memuat kerugian dari Peterson’s Solution.
+5. __[More on Peterson’s Solution](https://youtu.be/r3Ma_4_vF2s)__<br>
+    Video ini menarik karena video ini menjelaskan algoritma Peterson dengan menggunakan ilustrasi yang familiar dalam kehidupan sehari-hari. Walaupun durasinya singkat, video tersebut membantu saya dalam memahami bagaimana cara kerja algoritma peterson.
+6. __[Semaphore in OS](https://www.baeldung.com/cs/semaphore)__<br>
+    Artikel ini menarik karena menjelaskan mengenai semaphore dengan jelas dan lengkap. Artikel ini membahas definisi, tipe, atomic operations, implementasinya, dan lainnya. Artikel membantu saya dalam mengerti bagaimana operasi wait() dan signal() bekerja.
+7. __[Mutex vs. Semaphore](https://youtu.be/DvF3AsTglUU)__<br>
+    Video ini menjelaskan mengenai perbedaan antara mutex dan semaphore. Poin menarik dari video ini adalah menggunakan ilustrasi yang ada pada kehidupan sehari-hari. Penjelasannya juga mudah dipahami dan perbedaan antara keduanya menjadi semakin jelas.
+8. __[Deadlocks](https://www.studytonight.com/operating-system/deadlocks)__<br>
+    Artikel ini membahas mengenai apa itu deadlock secara jelas dan lengkap. Selain itu, artikel juga menjelaskan bagaimana perbedaan dari starvation dan deadlock. Bahasan artikel mencakup definisi, ilustrasi, kondisi, serta cara menghandle deadlock.
+9. __[Difference between Deadlock Prevention and Avoidance](https://www.geeksforgeeks.org/difference-between-deadlock-prevention-and-deadlock-avoidance)__<br>
+    Artikel ini menjelaskan deadlock prevention dan avoidance berdasarkan definisi. Kemudian, artikel juga menampilkan tabel perbedaan antara deadlock prevention dan avoidance. Tabel tersebut merupakan poin menarik dari artikel ini karena perbedaan antara keduanya jadi terlihat lebih jelas.
+10. __[Deadlock Handling Methods and Deadlock Prevention](https://youtu.be/pPM9Ajqmy_4)__<br>
+    Video ini menjelaskan cara-cara menghandle deadlock. Cakupan bahasannya meliputi deadlock ignorance, prevention, avoidance, dan detection & recovery. Video ini menarik karena penjelasannya jelas dan mudah untuk dipahami.
 
